@@ -1,3 +1,9 @@
+2008-08-20  Ulrich Mueller  <ulm@gentoo.org>
+
+	* elisp-common.eclass (elisp-compile): Add current directory to
+	load-path, to ensure that interdependent elisp files are visible
+	between themselves.
+
 2008-08-10  Ulrich Mueller  <ulm@gentoo.org>
 
 	* elisp-common.eclass (elisp-site-regen): Fix issue with empty
